--- a/css/can_do.css
+++ b/css/can_do.css
@@ -3,6 +3,7 @@
     src: url(../fonts/KiteOne-Regular.ttf);
 }
 
+/*DOCUMENT BODY*/
 body {
 	margin: 0;
 	font-family: KiteOne;
@@ -10,54 +11,80 @@ body {
 	background-color: transparent;
 }
 
+/*DOCUMENT HEADER*/
 header {
 	text-align: center;
 	height: 48px;
-	line-height: 48px;
-	font-size: 20px;
-	color: white;
+	line-height: 68px;
+	color: black;
+	border-bottom: 3px solid;
+	border-color: #87CEFA;
+	margin-left: 3px;
+	margin-right: 3px;
 	
-	/*Gradient Code*/
-	background: rgb(240,183,161); /* Old browsers */
-	background: -moz-linear-gradient(top, rgba(240,183,161,1) 0%, rgba(140,51,16,1) 50%, rgba(117,34,1,1) 51%, rgba(191,110,78,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(240,183,161,1)), color-stop(50%,rgba(140,51,16,1)), color-stop(51%,rgba(117,34,1,1)), color-stop(100%,rgba(191,110,78,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, rgba(240,183,161,1) 0%,rgba(140,51,16,1) 50%,rgba(117,34,1,1) 51%,rgba(191,110,78,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, rgba(240,183,161,1) 0%,rgba(140,51,16,1) 50%,rgba(117,34,1,1) 51%,rgba(191,110,78,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, rgba(240,183,161,1) 0%,rgba(140,51,16,1) 50%,rgba(117,34,1,1) 51%,rgba(191,110,78,1) 100%); /* IE10+ */
-	background: linear-gradient(to bottom, rgba(240,183,161,1) 0%,rgba(140,51,16,1) 50%,rgba(117,34,1,1) 51%,rgba(191,110,78,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0b7a1', endColorstr='#bf6e4e',GradientType=0 ); /* IE6-9 */
+	/*Gradient Code
+	background: rgb(240,183,161);
+	background: -moz-linear-gradient(top, rgba(240,183,161,1) 0%, rgba(140,51,16,1) 50%, rgba(117,34,1,1) 51%, rgba(191,110,78,1) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(240,183,161,1)), color-stop(50%,rgba(140,51,16,1)), color-stop(51%,rgba(117,34,1,1)), color-stop(100%,rgba(191,110,78,1)));
+	background: -webkit-linear-gradient(top, rgba(240,183,161,1) 0%,rgba(140,51,16,1) 50%,rgba(117,34,1,1) 51%,rgba(191,110,78,1) 100%);
+	background: -o-linear-gradient(top, rgba(240,183,161,1) 0%,rgba(140,51,16,1) 50%,rgba(117,34,1,1) 51%,rgba(191,110,78,1) 100%);
+	background: -ms-linear-gradient(top, rgba(240,183,161,1) 0%,rgba(140,51,16,1) 50%,rgba(117,34,1,1) 51%,rgba(191,110,78,1) 100%);
+	background: linear-gradient(to bottom, rgba(240,183,161,1) 0%,rgba(140,51,16,1) 50%,rgba(117,34,1,1) 51%,rgba(191,110,78,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0b7a1', endColorstr='#bf6e4e',GradientType=0 );
 	copy
+	*/
 }
 
+/*PAPER DATE*/
+header span.date {
+	position:absolute;
+	float: left;
+	font-size: 15px;
+	left: 3px;
+	width: 104px;
+	height: 34px;
+	line-height: 39px;
+	border: 2px solid;
+	top: 5px;
+	border-radius: 10px;
+	border-color: #87CEFA;
+}
+
+/*PAPER TITLE*/
 header span.page_title {
+	font-size: 35px;
 }
 
+/*'SETTINGS' BUTTON*/
 header input.bt_settings {
 	background-image: url(../images/settings.png);
-	background-size: 100%;
+	background-size: 70%;
 	background-repeat: no-repeat;
 	background-color: transparent;
+	background-position: center;
 	position: absolute;
 	float: right;
-	margin-right: 0px;
-	right: 3px;
+	right: 5px;
+	top: 3px;
 	width: 42px;
 	height: 42px;
 	border: 0px;
-	top: 3px;
 }
 
+/*PRESSED 'SETTINGS' BUTTON*/
 header input.bt_settings:active {
-	box-shadow: inset 0 0 10px #000000;
+	box-shadow: inset 0 3px 8px #000000;
 	border-radius: 100%;
 }
 
+/*TEXT INPUT  DIV*/
 div.input_data div.new_task {
 	width: auto;
 	margin-right: 50px;
 	margin-left: 3px;
 }
 
+/*TEXT INPUT ELEMENT*/
 div.input_data div.new_task input.new_task {
 	width: 100%;
 	height: 22px;
@@ -65,10 +92,12 @@ div.input_data div.new_task input.new_task {
 	padding-top: 20px;
 	border: none;
 	border-bottom: 2px solid;
+	border-color: #87CEFA;
 	background-color: transparent;
 	font-family: KiteOne;
 }
 
+/*'ADD NEW TASK' BUTTON*/
 div.input_data input.bt_create {
 	background-image: url(../images/plus.png);
 	background-size: 100%;
@@ -80,11 +109,12 @@ div.input_data input.bt_create {
 	border: 0px;
 
 	position: absolute;
-	right: 2px;
+	right: 4px;
 	margin-top: -43px;
 }
 
+/*PRESSED 'ADD NEW TASK BUTTON'*/
 div.input_data input.bt_create:active {
-	box-shadow: inset 0 0 10px #000000;
+	box-shadow: inset 0 3px 8px #000000;
 	border-radius: 100%;
 }
