--- a/css/can_do.css
+++ b/css/can_do.css
@@ -15,39 +15,39 @@ body {
 header {
 	text-align: center;
 	height: 48px;
-	line-height: 68px;
-	color: black;
-	border-bottom: 3px solid;
-	border-color: #87CEFA;
-	margin-left: 3px;
-	margin-right: 3px;
-	
-	/*Gradient Code
-	background: rgb(240,183,161);
-	background: -moz-linear-gradient(top, rgba(240,183,161,1) 0%, rgba(140,51,16,1) 50%, rgba(117,34,1,1) 51%, rgba(191,110,78,1) 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(240,183,161,1)), color-stop(50%,rgba(140,51,16,1)), color-stop(51%,rgba(117,34,1,1)), color-stop(100%,rgba(191,110,78,1)));
-	background: -webkit-linear-gradient(top, rgba(240,183,161,1) 0%,rgba(140,51,16,1) 50%,rgba(117,34,1,1) 51%,rgba(191,110,78,1) 100%);
-	background: -o-linear-gradient(top, rgba(240,183,161,1) 0%,rgba(140,51,16,1) 50%,rgba(117,34,1,1) 51%,rgba(191,110,78,1) 100%);
-	background: -ms-linear-gradient(top, rgba(240,183,161,1) 0%,rgba(140,51,16,1) 50%,rgba(117,34,1,1) 51%,rgba(191,110,78,1) 100%);
-	background: linear-gradient(to bottom, rgba(240,183,161,1) 0%,rgba(140,51,16,1) 50%,rgba(117,34,1,1) 51%,rgba(191,110,78,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0b7a1', endColorstr='#bf6e4e',GradientType=0 );
-	copy
-	*/
+	line-height: 48px;
+	color: white;
+
+	background: rgb(255,48,25); /* Old browsers */
+	background: -moz-linear-gradient(top, rgba(255,48,25,1) 0%, rgba(207,4,4,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,48,25,1)), color-stop(100%,rgba(207,4,4,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(255,48,25,1) 0%,rgba(207,4,4,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(255,48,25,1) 0%,rgba(207,4,4,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(255,48,25,1) 0%,rgba(207,4,4,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(255,48,25,1) 0%,rgba(207,4,4,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff3019', endColorstr='#cf0404',GradientType=0 ); /* IE6-9 */
 }
 
-/*PAPER DATE*/
-header span.date {
+/*INVENTORY BUTTON*/
+header input.bt_inventory {
+	background-image: url(../images/tasks.png);
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-color: transparent;
 	position:absolute;
 	float: left;
-	font-size: 15px;
+	width: 42px;
+	height: 42px;
 	left: 3px;
-	width: 104px;
-	height: 34px;
-	line-height: 39px;
-	border: 2px solid;
-	top: 5px;
-	border-radius: 10px;
-	border-color: #87CEFA;
+	top: 2px;
+	border: 0px;
+}
+
+/*PRESSED 'INVENTORY' BUTTON*/
+header input.bt_inventory:active {
+	box-shadow: inset 0 3px 8px #000000;
+	border-radius: 100%;
 }
 
 /*PAPER TITLE*/
@@ -77,7 +77,7 @@ header input.bt_settings:active {
 	border-radius: 100%;
 }
 
-/*TEXT INPUT  DIV*/
+/*TEXT INPUT DIV*/
 div.input_data div.new_task {
 	width: auto;
 	margin-right: 50px;
@@ -92,7 +92,7 @@ div.input_data div.new_task input.new_task {
 	padding-top: 20px;
 	border: none;
 	border-bottom: 2px solid;
-	border-color: #87CEFA;
+	border-color: black;/*#87CEFA*/
 	background-color: transparent;
 	font-family: KiteOne;
 }
@@ -117,4 +117,16 @@ div.input_data input.bt_create {
 div.input_data input.bt_create:active {
 	box-shadow: inset 0 3px 8px #000000;
 	border-radius: 100%;
+}
+
+/*INDIVIDUAL TASKS*/
+div.tasks div {
+	height: 20px;
+	line-height: 24px;
+	border-bottom: 2px solid;
+	border-color: black; /*#87CEFA*/
+	margin-right: 3px;
+	margin-left: 3px;
+	margin-top: 15px;
+	font-size: 19px;
 }
