--- a/css/can_do.css
+++ b/css/can_do.css
@@ -14,24 +14,24 @@ body {
 /*DOCUMENT HEADER*/
 header {
 	text-align: center;
+	width: 100%;
 	height: 48px;
 	line-height: 48px;
 	color: white;
-
-	background: rgb(255,48,25); /* Old browsers */
-	background: -moz-linear-gradient(top, rgba(255,48,25,1) 0%, rgba(207,4,4,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,48,25,1)), color-stop(100%,rgba(207,4,4,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, rgba(255,48,25,1) 0%,rgba(207,4,4,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, rgba(255,48,25,1) 0%,rgba(207,4,4,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, rgba(255,48,25,1) 0%,rgba(207,4,4,1) 100%); /* IE10+ */
-	background: linear-gradient(to bottom, rgba(255,48,25,1) 0%,rgba(207,4,4,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff3019', endColorstr='#cf0404',GradientType=0 ); /* IE6-9 */
+	z-index: 2;
+	border-bottom: 3px solid;
+	border-color: black;
+	position: fixed;
+	top: 0px;
+	box-shadow: 0px -2px 13px 1px #000000;
+	/*background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);*/
+	background: linear-gradient(to bottom, rgba(0,0,0,1.85) 0%,rgba(0,0,0,0.20) 100%);
 }
 
 /*INVENTORY BUTTON*/
 header input.bt_inventory {
-	background-image: url(../images/tasks.png);
-	background-size: 100%;
+	background-image: url(../images/tasks_white.png);
+	background-size: 80%;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-color: transparent;
@@ -57,7 +57,7 @@ header span.page_title {
 
 /*'SETTINGS' BUTTON*/
 header input.bt_settings {
-	background-image: url(../images/settings.png);
+	background-image: url(../images/settings_white.png);
 	background-size: 70%;
 	background-repeat: no-repeat;
 	background-color: transparent;
@@ -75,6 +75,11 @@ header input.bt_settings {
 header input.bt_settings:active {
 	box-shadow: inset 0 3px 8px #000000;
 	border-radius: 100%;
+}
+
+/*INPUT DATA POSITION*/
+div.input_data {
+	margin-top: 48px;
 }
 
 /*TEXT INPUT DIV*/
@@ -119,14 +124,51 @@ div.input_data input.bt_create:active {
 	border-radius: 100%;
 }
 
+/*TASKS CONTAINER*/
+div.tasks {
+	margin-top: 20px;
+}
+
 /*INDIVIDUAL TASKS*/
 div.tasks div {
-	height: 20px;
-	line-height: 24px;
-	border-bottom: 2px solid;
-	border-color: black; /*#87CEFA*/
-	margin-right: 3px;
-	margin-left: 3px;
-	margin-top: 15px;
+	line-height: 34px;
+	border: 1px solid;
+	border-color: black;
+	border-radius: 5px;
+	margin-right: 5px;
+	margin-left: 5px;
+	margin-bottom: 12px;
 	font-size: 19px;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+
+/*INDIVIDUAL TASKS TITLE*/
+div.tasks div span {
+	margin-left: 10px;
+}
+
+/*PLACE HOLDER TO AVOID SCROLL PROBLEMS*/
+div.placeholder {
+	width: 100%;
+	height: 22px;
+	bottom: 0px;
+}
+
+/*FOOTER*/
+div.footer {
+	width: 100%;
+	height: 22px;
+	position: fixed;
+	bottom: 0px;
+	border-top: 2px solid;
+	border-color: black;
+	color: white;
+	background: linear-gradient(to top, rgba(0,0,0,1.85) 0%,rgba(0,0,0,0.20) 100%);
+}
+
+div.footer span {
+	margin-left: 5px;
+	bottom: 2px;
 }
